--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DisplayDetails" android:parentActivityName=".MainActivity">
-
-
-        </activity>
+        <activity android:name=".BuwanekaActivity2" android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".DisplayDetails"
+            android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
