Ometh branch commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PasanActivity2"></activity>
+        <activity android:name=".OmethActivity2"></activity>
+        <activity android:name=".PasanActivity2" />
         <activity
             android:name=".BuwanekaActivity2"
             android:parentActivityName=".MainActivity" />
